# indice_pollution

./: .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_publish.yml  generate-history.yml  test.yml
clevercloud/: cron.json  cron.sh
client/: package.json  vue.config.js
client/src/: main.js
indice_pollution/: __init__.py  api.py  autocomplete.py  extensions.py  helpers.py  web.py
indice_pollution/history/: commands.py
indice_pollution/models/: __init__.py
indice_pollution/regions/: Auvergne-Rhône-Alpes.py  Bourgogne-Franche-Comté.py  Bretagne.py  Centre-Val de Loire.py  Corse.py  Grand Est.py  Guadeloupe.py  Guyane.py  Hauts-de-France.py  Martinique.py  Normandie.py  Nouvelle-Aquitaine.py  Occitanie.py  Pays de la Loire.py  Provence-Alpes-Côte d'Azur.py  Sud.py  __init__.py  auvergne-rhone-alpes.py  bretagne.py  centre_val_de_loire.py  corse.py  grand-est.py  haut_de_france.py  nouvelle_aquitaine.py  occitanie.py  pays_de_la_loire.py  solvers.py  Île-de-France.py
indice_pollution/static/: index.html  manifest.json
indice_pollution/templates/: base.html  index.html  indice.html  manifest.json
migrations/: env.py
migrations/versions/: 12c481be6cd3_ajout_bassin_d_air.py  15d404247610_add_zone_and_epci.py  17dfd71fe755_ajout_arrondissements_lyon.py  43fb18a1a53b_add_schema.py  510fbdb40b57_ajout_uniqueconstraint_sur_.py  51c45c33b356_ajout_données_radon.py  64254d2cc72b_changement_nom.py  649b57785efc_ajout_zone_regions_ile_de_france.py  9d4e63014385_ajout_tncc.py  a431221a8156_ajout_arrondissements_paris.py  a73a6070a957_ajout_epci_dans_commune.py  b8a8b4c98b23_ajout_nom_et_site_aasqa.py  c3ef4f2d719a_add_history_migration.py  (+4 more)
tests/: conftest.py  test_indice.py
(+44 files in other folders)
